--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-spinkit": "^3.0.0",
     "styled-components": "^5.2.3",
     "typescript": "~3.8.2"
   },
@@ -26,7 +27,8 @@
     "@types/react-dom": "^16.9.0",
     "@types/react-redux": "^7.1.7",
     "@types/react-router-dom": "^5.1.7",
-    "@types/styled-components": "^5.1.9"
+    "@types/styled-components": "^5.1.9",
+    "@types/react-spinkit": "^3.0.6"
   },
   "scripts": {
     "start": "react-scripts start",
